# ai-research-coach

./: AGENTS.md  CNAME  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: deploy-staging.yml
public/: AGENTS.md  coach-instructions.md  deep-eval-prompt.md  fast-eval-prompt.md  instructions-v1.md  instructions.md  recorder-prompt.md
public/pi-instructions/: readme.txt
python/ai-research-coach/: README.md  pyproject.toml
python/ai-research-coach/ai_research_coach/: __init__.py  _agents_md_fallback.py  cli.py  pi_api.py  pi_drafts.py  recorder.py  server.py
python/ai-research-coach/tests/: test_end_session_backgrounding.py  test_strip_paste_meta.py
scripts/: clear-workspace.sh  refresh_agents_md_fallback.py
src/: App.tsx  main.tsx  serverConfig.ts  studentProject.ts  useProjects.ts
src/chat/: availableModels.ts  createCompletionFunction.ts  logMessage.ts  passcodeStorage.ts
src/chat/tools/: endSession.ts  index.ts  runScript.ts
src/components/About/: AboutDialog.tsx
src/components/Chat/: ChatPanel.tsx  ChatSettingsDialog.tsx  ProjectBriefPanel.tsx
src/components/Outputs/: OutputItem.tsx  OutputPanel.tsx
src/outputs/: useOutputs.ts
src/pi/: DraftsAppBarWidget.tsx  FeedbackWidgets.tsx  PIApp.tsx  PIDraftsApp.tsx  PINavigator.tsx  PiAppShell.tsx  PromptDiffPanel.tsx  PromptViewer.tsx  ReplayPanel.tsx  SessionViewer.tsx  SynthesizePreflightDialog.tsx  draftsApi.ts  draftsStorage.ts  draftsSummary.ts  feedbackEvents.ts  feedbackUtils.ts  piApi.ts
src/react-ai-chat/: index.ts
(+8 files in other folders)
