[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-coach"
version = "0.1.0"
description = "Server for executing student/project-scoped scripts via HTTP API for AI Research Coach"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
ai-research-coach = "ai_research_coach.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_research_coach*"]
